external-crates/move/crates/move-compiler/tests/move_check/typing/module_call_internal.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E04001]: restricted visibility
   ┌─ tests/move_check/typing/module_call_internal.move:10:9
   │
 4 │     fun foo() {}
   │         --- This function is internal to its module. Only 'public' and 'public(friend)' functions can be called outside of their module
   ·
10 │         X::foo()
   │         ^^^^^^^^ Invalid call to internal function '0x2::X::foo'
